other/s-z/unique-ingress-host-and-path/ingress-bad.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress01
spec:
  rules:
  - host: foo
    http:
      paths:
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /bar
        pathType: Prefix
      - backend:
          service:
            name: demo-svc
            port:
              number: 8080
        path: /foo
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: badingress02
spec:
  rules:
  - host: bar
    http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
      - path: /cat
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
